# blobbyvolley2

./: .gitignore  .gitmodules  .travis.yml  AUTHORS  Blobby Volley.cbp  CMakeLists.txt  ChangeLog  Makefile.am  Makefile.in  NintendoSwitchToolchain.cmake  README  README.md  TODO  blobby.dev  bootstrap  configure  configure-switch.sh  configure.in  doxyfile  vcpkg.json
data/: CMakeLists.txt  Makefile.am  Makefile.in  api.lua  bot_api.lua  colorconfig.xml  config.xml  inputconfig.xml  lang_cs.xml  lang_de.xml  lang_en.xml  lang_es.xml  lang_fr.xml  lang_it.xml  rules.lua  rules_api.lua  server.xml
data/gf2x/: Thumbs.db
data/rules/: back_defence.lua  blitz.lua  default.lua  firewall.lua  jumping_jack.lua  one_hit_wonder.lua  rules_firewall.lua  rules_tennis.lua  sticky_mode.lua  tennis.lua  the_double.lua
data/scripts/: Union.lua  Union3.lua  adam.ai  axji-0-2.lua  axji.lua  bert.ai  carl.ai  com_04c.lua.txt  com_04d.lua  com_10Schm.lua  com_10eB1.lua  com_10eB2_Schmettermod.lua  com_10hB1.lua  com_11.lua  dumbjump.lua  dumpjump.lua  gintonicV9.lua  hutsimbel.lua  hyp013.lua  hyp014.lua  hyp07.lua  hyperion.lua  jump.lua  reduced.lua  simbel.lua  simple.lua  tutorial.lua
data/scripts/old/: com_10.lua  com_10eB2.lua  hyp011.lua
data/scripts/older versions/: com_04c.lua  com_10B2ex.lua  com_10Schm.lua
macos/: CMakeLists.txt  Info.plist  icon.icns
src/: BlobbyApp.cpp  BlobbyApp.h  BlobbyDebug.cpp  BlobbyDebug.h  Blood.cpp  Blood.h  BotAPICalculations.cpp  BotAPICalculations.h  CMakeLists.txt  Clock.cpp  Clock.h  Color.h  CrossCorrelation.h  DedicatedServer.cpp  DedicatedServer.h  DuelMatch.cpp  DuelMatch.h  DuelMatchState.cpp  DuelMatchState.h  File.cpp  File.h  FileExceptions.h  FileRead.cpp  FileRead.h  FileSystem.cpp  FileSystem.h  FileWrite.cpp  FileWrite.h  GUIManager.cpp  GUIManager.h  GameConstants.h  GameLogic.cpp  GameLogic.h  GameLogicState.cpp  GameLogicState.h  GenericIO.cpp  GenericIO.h  GenericIODetail.h  GenericIOFwd.h  Global.h  (+90 more)
src/blobby-client/: CMakeLists.txt  IMGUI.cpp  IMGUI.h  SoundManager.cpp  SoundManager.h  TargetDevice.h  TextManager.cpp  TextManager.h
src/blobby-client/input/: InputDevice.h  InputManager.cpp  InputManager.h  InputSourceFactory.h  JoystickInput.cpp  JoystickPool.cpp  JoystickPool.h  KeyboardInput.cpp  LocalInputSource.cpp  LocalInputSource.h  MouseInput.cpp  ScriptedInputSource.cpp  ScriptedInputSource.h  TouchInput.cpp
src/blobby-client/render/: RenderManager.cpp  RenderManagerGL2D.cpp  RenderManagerGL2D.h  RenderManagerNull.cpp  RenderManagerNull.h  RenderManagerSDL.cpp  RenderManagerSDL.h
src/blobby-client/state/: GameState.cpp  GameState.h  LobbyStates.cpp  LobbyStates.h  LocalGameState.cpp  LocalGameState.h  NetworkSearchState.cpp  NetworkSearchState.h  NetworkState.cpp  (+5 more)
src/blobby-core/: CMakeLists.txt
src/blobnet/: CMakeLists.txt  Logger.hpp
src/input_device/: JoystickInput.cpp  JoystickPool.cpp  JoystickPool.h  KeyboardInput.cpp  MouseInput.cpp  TouchInput.cpp
src/lua/: CMakeLists.txt  Makefile.am
src/raknet/: ArrayList.h  Autopatcher.cpp  Autopatcher.h  BigTypes.h  BitStream.cpp  BitStream.h  CMakeLists.txt  CheckSum.cpp  CheckSum.h  ClientContextStruct.h  DataBlockEncryptor.h  DataReplicator.h  DistributedNetworkObject.h  DistributedNetworkObjectHeader.h  DistributedNetworkObjectManager.h  DistributedNetworkObjectStub.cpp  DistributedNetworkObjectStub.h  DownloadableFileDescriptor.cpp  EncodeClassName.h  ExtendedOverlappedPool.cpp  ExtendedOverlappedPool.h  FullyConnectedMesh.cpp  FullyConnectedMesh.h  GetTime.cpp  GetTime.h  HuffmanEncodingTree.cpp  HuffmanEncodingTreeFactory.cpp  HuffmanEncodingTreeFactory.h  HuffmanEncodingTreeNode.h  InternalPacket.h  InternalPacketPool.cpp  LICENSE  LinkedList.h  Makefile.am  MessageHandlerInterface.cpp  MessageHandlerInterface.h  Multiplayer.h  NetworkIDGenerator.cpp  NetworkIDGenerator.h  NetworkObject.cpp  (+40 more)
src/replays/: IReplayLoader.h  ReplayDefs.h  ReplayLoader.cpp  ReplayPlayer.cpp  ReplayPlayer.h  ReplayRecorder.cpp  ReplayRecorder.h  ReplaySavePoint.cpp  ReplaySavePoint.h
src/server/: DedicatedServer.cpp  DedicatedServer.h  MatchMaker.cpp  MatchMaker.h  NetworkGame.cpp  NetworkGame.h  NetworkPlayer.cpp  NetworkPlayer.h  ThreadSafeRakServer.h  servermain.cpp
src/state/: GameState.cpp  GameState.h  LastMatchesState.cpp  LastMatchesState.h  LobbyState.cpp  LobbyState.h  LobbyStates.cpp  LobbyStates.h  LocalGameState.cpp  LocalGameState.h  LoginState.cpp  LoginState.h  NetworkSearchState.cpp  NetworkSearchState.h  NetworkState.cpp  NetworkState.h  OptionsState.cpp  OptionsState.h  RankedState.cpp  RankedState.h  ReplaySelectionState.cpp  ReplaySelectionState.h  ReplayState.cpp  ReplayState.h  State.cpp  State.h
src/tinyxml/: CMakeLists.txt  Makefile.am
test/: Base64Test.cpp  CMakeLists.txt  FileTest.cpp  GenericIOTest.cpp  LagDetectionTest.cpp  RulesTest.cpp  benchmark-bots.py
trunk/: AUTHORS  Blobby Volley.cbp  CMakeLists.txt  ChangeLog  INSTALL  Installer.iss  Makefile.am  Makefile.in  Makefile.win  README  TODO  bootstrap  config.h.in  configure  configure.in  doxyfile  neuralbot.net  res.rc
trunk/data/: CMakeLists.txt  Makefile.am  Makefile.in  api.lua  bot_api.lua  config.xml  inputconfig.xml  lang_de.xml  lang_en.xml  lang_fr.xml  onlineserver.xml  rules.lua  server.xml
trunk/doc/: CodeConvention.txt  ScriptAPI.txt  ScriptAPI_de.txt
trunk/src/: BlobbyDebug.cpp  BlobbyDebug.h  Blood.cpp  Blood.h  BotAPICalculations.cpp  CMakeLists.txt  Clock.cpp  Clock.h  CrossCorrelation.h  DedicatedServer.cpp  DedicatedServer.h  DuelMatch.cpp  DuelMatch.h  DuelMatchState.cpp  DuelMatchState.h  File.cpp  File.h  FileExceptions.h  FileRead.cpp  FileRead.h  FileSystem.cpp  FileSystem.h  FileWrite.cpp  FileWrite.h  GUIManager.cpp  GUIManager.h  GameConstants.h  GameLogic.cpp  GameLogic.h  GameLogicState.cpp  GameLogicState.h  GenericIO.cpp  GenericIO.h  GenericIODetail.h  GenericIOFwd.h  Global.h  IMGUI.cpp  IMGUI.h  IReplayLoader.h  IScriptableComponent.cpp  (+77 more)
trunk/test/: FileTest.cpp  LagDetectionTest.cpp  RulesTest.cpp
trunk/win32-installer/: Installer.iss
(+278 files in other folders)
