AC_INIT(src/main.cpp)
AC_CANONICAL_TARGET()
AM_INIT_AUTOMAKE(blobby2, alpha-4d)

AC_PROG_CC
AC_PROG_CXX
AC_PROG_INSTALL

AC_ARG_ENABLE(debug, AC_HELP_STRING([--enable-debug],
    [Enable debugging support]),
    [CXXFLAGS=" -O0 -ggdb3"],
    [CXXFLAGS=" -Os -s"])

AC_ARG_ENABLE(profile, AC_HELP_STRING([--enable-profile],
    [Enable profiling support]),
    [CXXFLAGS="$CXXFLAGS -pg"])

AC_CHECK_LIB(SDL,SDL_Init, [], [AC_MSG_ERROR(SDL required)])
AC_CHECK_LIB(z, inflate, [], [AC_MSG_ERROR(zlib required)])
AC_CHECK_LIB(physfs,PHYSFS_init, [], [AC_MSG_ERROR(PhysFS required)])

AC_CHECK_LIB(GL, glVertex3f, [], [AC_MSG_WARN(OpenGL support disabled)])

AC_SEARCH_LIBS(lua_pushboolean,lua lua5.1 lua50, [], [AC_MSG_ERROR(liblua5.1, liblua50, or liblua required)])
AC_SEARCH_LIBS(luaopen_math,lualib lualib5.1 lualib50, [], [AC_MSG_ERROR(liblualib5.1, liblualib50, or liblualib required)])

AC_CHECK_HEADER(lua5.1/lua.h,AC_DEFINE(HAVE_LUA51_LUA_H),[])
AC_CHECK_HEADER(lua5.1/lauxlib.h,AC_DEFINE(HAVE_LUA51_LAUXLIB_H),[])
AC_CHECK_HEADER(lua5.1/lualib.h,AC_DEFINE(HAVE_LUA51_LUALIB_H),[])

AC_CHECK_HEADER(lua50/lua.h,AC_DEFINE(HAVE_LUA50_LUA_H),[])
AC_CHECK_HEADER(lua50/lauxlib.h,AC_DEFINE(HAVE_LUA50_LAUXLIB_H),[])
AC_CHECK_HEADER(lua50/lualib.h,AC_DEFINE(HAVE_LUA50_LUALIB_H),[])

AC_CHECK_HEADER(lua/lua.h,AC_DEFINE(HAVE_LUA_LUA_H),[])
AC_CHECK_HEADER(lua/lauxlib.h,AC_DEFINE(HAVE_LUA_LAUXLIB_H),[])
AC_CHECK_HEADER(lua/lualib.h,AC_DEFINE(HAVE_LUA_LUALIB_H),[])

AC_CHECK_HEADER(lua.h,AC_DEFINE(HAVE_LUA_H),[])
AC_CHECK_HEADER(lauxlib.h,AC_DEFINE(HAVE_LAUXLIB_H),[])
AC_CHECK_HEADER(lualib.h,AC_DEFINE(HAVE_LUALIB_H),[])

AC_ARG_WITH([gamedatadir],
	[AS_HELP_STRING([--with-gamedatadir=DIR],
	[Override the default directory for game data])],
	[GAMEDATADIR="$withval"],
	[GAMEDATADIR="$datadir/$PACKAGE"]
)
AC_SUBST([GAMEDATADIR])

AC_OUTPUT(
	Makefile \
	src/Makefile \
	data/Makefile
	)
        
