AC_INIT(src/main.cpp)
AC_CANONICAL_TARGET()
AM_INIT_AUTOMAKE(blobby, alpha-4d)

AC_PROG_CC
AC_PROG_CXX
AC_PROG_RANLIB
AC_PROG_INSTALL

AC_ARG_ENABLE(debug, AC_HELP_STRING([--enable-debug],
    [Enable debugging support]),
    [CXXFLAGS=" -O0 -ggdb3"],
    [CXXFLAGS=" -Os -s"])

AC_ARG_ENABLE(profile, AC_HELP_STRING([--enable-profile],
    [Enable profiling support]),
    [CXXFLAGS="$CXXFLAGS -pg"])

AC_CHECK_LIB(SDL,SDL_Init, [], [AC_MSG_ERROR(SDL required)])
AC_CHECK_LIB(z, inflate, [], [AC_MSG_ERROR(zlib required)])
AC_CHECK_LIB(physfs,PHYSFS_init, [], [AC_MSG_ERROR(PhysFS required)])

AX_CHECK_GL()

if test no_gl != "yes"; then
HAVE_LIBGL=1
else
HAVE_LIBGL=0
fi
AC_SUBST([HAVE_LIBGL])

AC_ARG_WITH([gamedatadir],
	[AS_HELP_STRING([--with-gamedatadir=DIR],
	[Override the default directory for game data])],
	[GAMEDATADIR="$withval"],
	[GAMEDATADIR="$datadir/$PACKAGE"]
)
AC_SUBST([GAMEDATADIR])

AC_OUTPUT(
	Makefile \
	src/Makefile \
	src/lua/Makefile \
	src/tinyxml/Makefile \
	data/Makefile
	)
        
