noinst_LIBRARIES = liblua.a

liblua_a_SOURCES = lapi.c lcode.c ldebug.c ldo.c ldump.c lfunc.c lgc.c \
	llex.c lmem.c lobject.c lopcodes.c lparser.c lstate.c lstring.c \
	ltable.c ltm.c lundump.c lvm.c lzio.c lauxlib.c lbaselib.c \
	ldblib.c liolib.c lmathlib.c loslib.c ltablib.c lstrlib.c \
	loadlib.c linit.c lapi.h lauxlib.h lcode.h ldebug.h ldo.h \
	lfunc.h lgc.h llex.h llimits.h lmem.h lobject.h lopcodes.h \
	lparser.h lstate.h lstring.h ltable.h ltm.h luaconf.h lua.h \
	lualib.h lundump.h lvm.h lzio.h
