noinst_LIBRARIES=libraknet.a
libraknet_a_SOURCES= \
	ArrayList.h \
	AsynchronousFileIO.h \
	Autopatcher.h \
	BigTypes.h \
	BinarySearchTree.h \
	BitStream.h \
	CheckSum.h \
	ClientContextStruct.h \
	DataBlockEncryptor.h \
	DataReplicator.h \
	DistributedNetworkObject.h \
	DistributedNetworkObjectHeader.h \
	DistributedNetworkObjectManager.h \
	DistributedNetworkObjectStub.h \
	DownloadableFileDescriptor.h \
	EncodeClassName.h \
	ExtendedOverlappedPool.h \
	FullyConnectedMesh.h \
	GetTime.h \
	HuffmanEncodingTreeFactory.h \
	HuffmanEncodingTree.h \
	HuffmanEncodingTreeNode.h \
	InternalPacket.h \
	InternalPacketPool.h \
	LinkedList.h \
	MessageHandlerInterface.h \
	MTUSize.h \
	Multiplayer.h \
	NetworkIDGenerator.h \
	NetworkObject.h \
	NetworkTypes.h \
	OrderedList.h \
	PacketEnumerations.h \
	PacketPool.h \
	PacketPriority.h \
	Queue.h \
	QueueLinkedList.h \
	RakClient.h \
	RakClientInterface.h \
	RakNetQueue.h \
	RakNetStatistics.h \
	RakNetworkFactory.h \
	RakPeer.h \
	RakPeerInterface.h \
	RakServer.h \
	RakServerInterface.h \
	Rand.h \
	ReliabilityLayer.h \
	rijndael-boxes.h \
	rijndael.h \
	RPCMap.h \
	RPCNode.h \
	RSACrypt.h \
	SHA1.h \
	SimpleMutex.h \
	SingleProducerConsumer.h \
	SocketLayer.h \
	StringCompressor.h \
	Types.h \
	\
	AsynchronousFileIO.cpp \
	Autopatcher.cpp \
	BitStream.cpp \
	CheckSum.cpp \
	DataBlockEncryptor.cpp \
	DataReplicator.cpp \
	DistributedNetworkObject.cpp \
	DistributedNetworkObjectManager.cpp \
	DistributedNetworkObjectStub.cpp \
	DownloadableFileDescriptor.cpp \
	EncodeClassName.cpp \
	ExtendedOverlappedPool.cpp \
	FullyConnectedMesh.cpp \
	GetTime.cpp \
	HuffmanEncodingTree.cpp \
	HuffmanEncodingTreeFactory.cpp \
	InternalPacketPool.cpp \
	MessageHandlerInterface.cpp \
	NetworkIDGenerator.cpp \
	NetworkObject.cpp \
	NetworkTypes.cpp \
	OrderedList.cpp \
	PacketPool.cpp \
	RakClient.cpp \
	RakNetStatistics.cpp \
	RakNetworkFactory.cpp \
	RakPeer.cpp \
	RakServer.cpp \
	Rand.cpp \
	ReliabilityLayer.cpp \
	rijndael.cpp \
	RPCMap.cpp \
	RPCNode.cpp \
	SHA1.cpp \
	SimpleMutex.cpp \
	SocketLayer.cpp \
	StringCompressor.cpp
